2005-10-17  Sami Wagiaalla  <swagiaal@redhat.com>

	* TaskStatusWidget.java (TaskStatusWidget): Removed the thread entry
	address from the label.
	* observers/ProcForkObserver.java (update): Added special filter
	to check for the new process's parent.
	* ActionPool.java: Added actions for fork and clone observer.
	(initActions): Fixed exception on right click.

2005-10-14  Sami Wagiaalla  <swagiaal@redhat.com>

	* ActionPool.java: Changed abstract methods in Action to regular
	methods that throw and UnimplementedFucntionException if they are
	not overwirtten in the child class.
	* AllProcWidget.java: Fixed null pointer exception with rapid tree
	slection changes.
	* observers/ProcCloneObserver.java: New file.
	* observers/ProcForkObserver.java: New file.
	* StatusWidget.java (StatusWidget): Removed bad cast.
	Changed layout, and added seperator.

2005-10-13  Sami Wagiaalla  <swagiaal@redhat.com>

	* ProcStatusWidget.java: new file.
	* CustomeObserverWindow.java: new file.
	* TaskStatusWidget.java: new file.
	* WindowManager.java: Added a handel for customObserverWindow and 
	hid it by default.
	* InfoWidget.java: added setSelectedProc and setSelectedTask.
	* AllProcWidget.java: Added code to select first thread by default.
	Added handling for creating threa status widget and showing it.
	Changed InfoWidget to be one per class instead of per process.
	* GuiData.java: Changed infoWidget handle to a generic StatusWidget
	handle.
	* observers/SyscallObserver.java: new file.
	* ThreadMenu.java, WatchMenu.java: added calls for dynamically
	instanciating the appropriate ObserverMenu.
	* TaskData.java (add): new function for adding SyscallObserver.
	* StatusWidget.java: Minor eye candy; replace procName lable by frame,
	Removed always show scrol bars around textbox and treeview.
	Added setName function.
	Changed constructor to take generic GuiData.
	* ObserversMenu.java: Removed Singleton instanciation. ObserversMenu